# email-archiver

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEBUGGING_EMAIL_MODAL.md  DEPLOYMENT.md  EMAIL_DETAIL_MODAL_COMPARISON.md  FEATURE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  NICEGUI_MIGRATION_COMPLETE.md  README.md  TAILWIND_ENHANCEMENTS.md  TESTING_GUIDE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: checkpoint.json  settings.yaml
core/: gmail_handler.py  graph_handler.py  utils.py
docs/: API.md  EXAMPLES.md  QUICKSTART.md  README.md  RELEASE.md  SPECIFICATION.md
email_archiver/: __init__.py  main.py
email_archiver/core/: classifier.py  content_cleaner.py  db_handler.py  extractor.py  gmail_handler.py  graph_handler.py  llm_error_handler.py  paths.py  utils.py
email_archiver/server/: app.py  nicegui_app.py
email_archiver/server/static/: index.html
email_archiver/server/static/assets/: index-C97M_dL7.css  index-DJAAVek5.js
email_archiver/server/templates/: index.html
email_archiver/ui/: tailwind.config.js
email_archiver/ui/src/: App.css  App.jsx  index.css
scripts/: migrate_to_sqlite.py
test-data/: 20251222_1950_=_utf-8_Q_Portulans=20Institute=20December=202025=20Newsletter_=_53193519.eml
