[project]
name = "email-archiver"
version = "0.1.0"
description = "Email-to-EML Secure Archiver"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "msal",
    "python-dateutil",
    "tqdm",
    "requests",
    "pyyaml"
]

[project.scripts]
email-archiver = "email_archiver.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["email_archiver"]

